Fix DCOP call setEncoding.  I pray KDE4 will have better encoding coding.

BUG: 120998

svn path=/branches/KDE/3.5/kdebase/konsole/; revision=540465